Add github workflows

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,6 +49,21 @@ jobs:
       - run: exit 1
         continue-on-error: true
 
+  zap_baseline:
+    runs-on: ubuntu-22.04
+    needs: test
+    steps:
+      - run: |
+           docker pull hysnsec/zap:2.16.1
+           docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap hysnsec/zap:2.16.1 zap-baseline.py -t ${{ secrets.PROD_URL }} -J zap-output.json
+        continue-on-error: true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ZAP Scan
+          path: zap-output.json
+        if: always()        # what is this for?
+
   prod:
     runs-on: ubuntu-22.04
     needs: integration
